JDO-652: extending existing query test cases to run the JDOQLTypedQuery version of the test cases